--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -2,7 +2,12 @@
   box-sizing: border-box;
   /* font: inherit; */
   font-family: "Akaya Telivigala", cursive;
-  background-image: "public/favicon/background.jpg";
+  background-image: "public/images/back.jpeg";
+  margin-left: auto;
+  margin-right: auto;
+  background-size: contain;
+  background-position: center;
+  font-size: 20px;
 }
 a {
   text-decoration: none;
@@ -102,8 +107,8 @@ body {
 .textbox {
   overflow: auto;
   overflow-wrap: break-word;
-  background-color: #23799B;
-  border: 1px solid black;
+  background-color: #23799b;
+  border: 3px solid black;
   margin: 8px 0;
   padding: 10px;
   border-radius: 10px;
@@ -175,7 +180,7 @@ body {
     border-radius: 6px;
   }
   .generic_button:hover {
-    background:   #393270;
+    background: #393270;
   }
 
   .generic_button:focus {
