--- a/public/stylesheets/lobby.css
+++ b/public/stylesheets/lobby.css
@@ -2,6 +2,7 @@ body {
     background: #eff4fb;
     font-family: 'Montserrat', sans-serif;
 }
+
 h1, h2 {
     text-align: -moz-center;
     text-align: -webkit-center;
@@ -10,16 +11,24 @@ h1, h2 {
 
 h1 {
     color: #094069;
-    padding-top: 20px;
+    padding: 40px 0 10px;
 }
 
 h2 {
     color: #0078d4;
 }
 
+h4 {
+    margin: 10px 0;
+}
+
 .user-container {
-    margin: 60px auto;
+    margin: 70px auto 40px;
     width: 80%;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: -webkit-flex;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -30,10 +39,58 @@ h2 {
     text-align: -moz-center;
     text-align: -webkit-center;
     text-align: center;
-    padding: 0 40px;
+    padding: 0 40px 20px;
 }
 
 img {
     width: 100px;
     height: 100px;
+}
+
+.buttons {
+    display: flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: -webkit-flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 70px;
+}
+
+.start-btn, .leave-btn {
+    padding: 15px 30px;
+    border-radius: 20px;
+    margin: 0 40px;
+    outline: none;
+    border: none;
+    color: #ffffff;
+    transform: scale(0.95);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+
+.start-btn {
+    background: #0078d4;
+}
+
+.leave-btn {
+    background: #000000;
+}
+
+.start-btn:hover, .leave-btn:hover {
+    transform: scale(1);
+    cursor: pointer;
+}
+
+.start-btn:hover {
+    background: #094069;
+}
+
+.leave-btn:hover {
+    background: #333333;
+}
+
+.start-btn:active, .leave-btn:active {
+    transform: scale(0.95);
 }
