--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,8 +1,8 @@
 * {
   box-sizing: border-box;
   /* font: inherit; */
-  font-family: "Akaya Telivigala", cursive;
-  background-image: "public/images/back.jpeg";
+  font-family: "Montserrat", sans-serif;
+  background-image: "public/images/background.png";
   margin-left: auto;
   margin-right: auto;
   background-size: contain;
@@ -11,13 +11,13 @@
 }
 a {
   text-decoration: none;
-  color: #006591;
+  color: #094069;
 }
 a:hover {
   text-decoration: underline;
 }
 a:visited {
-  color: #4b0082;
+  color: #ffc0cb;
 }
 h1 {
   text-align: center;
@@ -38,16 +38,15 @@ body {
   /* background: #8e59c0ef; */
   /* background-image: linear-gradient(#302d5f,#7a77a3); */
   /* background-image: radial-gradient(#302d5f,#09071a); */
-  background-image: url("/images/back.jpeg");
+  background-image: url("/images/background.png");
   background-size: 100%;
-  font-size: 16;
+  font-size: 16px;
   line-height: 1.3;
   position: relative;
   margin: 0;
   min-height: 100vh;
 }
 .generic_button {
-  font-family: "Akaya Telivigala", cursive;
   display: inline-block;
   border: none;
   margin: 0;
@@ -83,6 +82,7 @@ body {
 }
 #create_room_input {
   height: 28px;
+  radius-width:10px;
 }
 #button_create {
   height: 28px;
@@ -107,7 +107,7 @@ body {
 .textbox {
   overflow: auto;
   overflow-wrap: break-word;
-  background-color: #23799b;
+  background-color: #eff4fb;
   border: 3px solid black;
   margin: 8px 0;
   padding: 10px;
