--- a/public/stylesheets/playground.css
+++ b/public/stylesheets/playground.css
@@ -1,17 +1,17 @@
 * {
   box-sizing: border-box;
   font: inherit;
-  font-family: "Akaya Telivigala", cursive;
+  font-family: "Montserrat", sans-serif;
 }
 a {
   text-decoration: none;
-  color: #006591;
+  color: #094069;
 }
 a:hover {
   text-decoration: underline;
 }
 a:visited {
-  color: #4b0082;
+  color: #ffc0cb;
 }
 h1 {
   text-align: center;
@@ -24,8 +24,8 @@ h1 {
 
 body {
   font-family: sans-serif;
-  background-image: radial-gradient(#302d5f,#14112a);
-  font-size: 16;
+  background-image: radial-gradient(#094069,#eff4fb);
+  font-size: 16px;
   line-height: 1.3;
   position: relative;
   margin: 0;
@@ -36,7 +36,7 @@ body {
   border: none;
   margin: 0;
   text-decoration: none;
-  background: #272257;
+  background: #094069;
   color: #ffffff;
   font-family: sans-serif;
   font-size: 1rem;
@@ -58,11 +58,10 @@ body {
 }
 .generic_button:hover {
   cursor: pointer;
-  background-color: #393270;
+  background-color: #094069;
 }
 .wrapper {
-  margin: 8px;
-  margin-bottom: 0;
+  margin: 8px 8px 0;
   display: flex;
   flex-flow: wrap;
   padding-bottom: 3em;
@@ -104,7 +103,7 @@ body {
   overflow: auto;
   overflow-wrap: break-word;
   background-color: #e8f4f8;
-  border: 1px solid black;
+  border: 2px solid #094069;
   border-radius: 15px;
   margin: 8px 0;
 }
@@ -145,6 +144,7 @@ td {
   background: #e8f4f8;
   float: left;
 }
+
 p{
 color: white;
 }
@@ -209,14 +209,12 @@ color: white;
   background: #ffffff;
   max-height: calc(100% - 46px);
   touch-action: none;
-  touch-action: pinch-zoom;
   border-radius: 15px;
 }
 
 .belowCanvas {
   height: 30px;
   display: flex;
-  display: none;
   justify-content: space-between;
 }
 
@@ -335,10 +333,10 @@ color: white;
     padding: 0;
   }
   .generic_button {
-    border-radius: 500;
+    border-radius: 500px;
   }
   .generic_button:hover {
-    background-color: #393270;
+    background-color: #0078d4;
   }
 
   .scoreboard {
