--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   /* font: inherit; */
   font-family: "Montserrat", sans-serif;
-  background-image: "public/images/background.png";
+  background-image: radial-gradient(#094069,#eff4fb);
   margin-left: auto;
   margin-right: auto;
   background-size: contain;
