--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -8,6 +8,10 @@
   background-position: center;
   font-size: 20px;
 }
+body {
+  background-image: url("../images/background.jpg");
+  background-color: #cccccc;
+}
 a {
   text-decoration: none;
   color: #094069;
@@ -38,7 +42,6 @@ body {
   /* background: #8e59c0ef; */
   /* background-image: linear-gradient(#302d5f,#7a77a3); */
   /* background-image: radial-gradient(#302d5f,#09071a); */
-  background-image: radial-gradient(#094069,#eff4fb);
   background-size: 100%;
   font-size: 16px;
   line-height: 1.3;
