--- a/public/stylesheets/playground.css
+++ b/public/stylesheets/playground.css
@@ -3,6 +3,7 @@
   font: inherit;
   font-family: "Montserrat", sans-serif;
 }
+
 a {
   text-decoration: none;
   color: #094069;
@@ -11,7 +12,7 @@ a:hover {
   text-decoration: underline;
 }
 a:visited {
-  color: #ffc0cb;
+  color: #30C4EB;
 }
 h1 {
   text-align: center;
@@ -24,7 +25,7 @@ h1 {
 
 body {
   font-family: sans-serif;
-  background-image: radial-gradient(#094069, #eff4fb);
+  background-image: radial-gradient(#30C4EB, #eff4fb);
   font-size: 16px;
   line-height: 1.3;
   position: relative;
@@ -58,7 +59,7 @@ body {
 }
 .generic_button:hover {
   cursor: pointer;
-  background-color: #094069;
+  background-color: #30C4EB;
 }
 .wrapper {
   margin: 8px 8px 0;
