--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -7,11 +7,26 @@
   background-size: contain;
   background-position: center;
   font-size: 20px;
+  font-weight: 800;
 }
 body {
-  background-image: url("../images/background.jpg");
-  background-color: #cccccc;
+  color: #ffffff;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/background.jpg');
+
+}
+
+#main-container {
+  background: #eff4fb;
+}
+
 a {
   text-decoration: none;
   color: #094069;
@@ -27,14 +42,23 @@ h1 {
   margin: 0;
   padding: 0;
   font-size: 2em;
-  font-weight: bold;
   /* font-family: '' */
 }
 
 h2 {
   text-align: center;
-  font-weight: bold;
+  font-weight: 900;
   font-size: 16pt;
+  color: #fff;
+  text-shadow:
+          0 0 7px #fff,
+          0 0 10px #fff,
+          0 0 21px #fff,
+          0 0 42px #0fa,
+          0 0 82px #0fa,
+          0 0 92px #0fa,
+          0 0 102px #0fa,
+          0 0 151px #0fa;
 }
 
 body {
@@ -86,47 +110,51 @@ body {
 #create_room_input {
   height: 28px;
   radius-width: 10px;
+  outline: none;
+  border: none;
 }
-#button_create {
-  height: 28px;
-  line-height: inherit;
-}
+
 .wrapper {
   margin: 8px 8px 0 8px;
   display: flex;
   flex-flow: wrap;
+  align-items: center;
+  justify-content: center;
   padding-bottom: 3em;
 }
 
-.wrapper > * {
-  flex: 1 100%;
-}
-
 .wrapper_item {
-  padding: 0;
+  padding: 10px;
   margin: 15px 0;
 }
 
 .textbox {
   overflow: auto;
   overflow-wrap: break-word;
-  background-color: #eff4fb;
+  /*background-color: #eff4fb;*/
   border: 3px solid black;
   margin: 8px 0;
-  padding: 10px;
+  padding: 20px;
   border-radius: 10px;
+  background-color: #010422;
 }
 
 #introduction {
   margin: 30px 100px 0;
+  display: flex;
 }
 
+.kuri-logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 #main {
   display: inline-block;
   text-align: center;
 }
-#refresh {
+#refresh, #button_create {
   margin: 10px auto 0 auto;
   padding: 3px 10px;
 }
@@ -169,13 +197,25 @@ body {
   }
   #introduction {
     order: 1;
-    margin: 30px 100px 0;
   }
+
+  .intro-text {
+    text-align: justify;
+    width: 70%;
+  }
+
+  #introduction img {
+    width: 200px;
+    height: 200px;
+  }
+
   #main {
     order: 2;
   }
   #sidebar_right {
     order: 3;
+    width: fit-content;
+    margin-top: 0;
   }
   #middle {
     display: inline-block;
@@ -188,9 +228,14 @@ body {
 
   .generic_button {
     border-radius: 6px;
+    border: #ffffff 2px solid;
+    background: #01052f;
+    color: #ffffff;
+    padding: 2px 2px 8px;
   }
   .generic_button:hover {
-    background: #30C4EB;
+    background: #ffffff;
+    color: #01052f;
   }
 
   .generic_button:focus {
