--- a/public/stylesheets/playground.css
+++ b/public/stylesheets/playground.css
@@ -25,7 +25,8 @@ h1 {
 
 body {
   font-family: sans-serif;
-  background-image: radial-gradient(#30C4EB, #eff4fb);
+  background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('../images/background.jpg');
+  /*background-image: radial-gradient(#30C4EB, #eff4fb);*/
   font-size: 16px;
   line-height: 1.3;
   position: relative;
@@ -254,6 +255,10 @@ p {
 .show {
   opacity: 1;
   transition: opacity 200ms;
+}
+
+#right_text {
+  margin-left: 5px;
 }
 
 #opaque_gradient {
