--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,173 +1,187 @@
 * {
-  box-sizing: border-box;
-  /* font: inherit; */
-  font-family: "Montserrat", sans-serif;
-  margin-left: auto;
-  margin-right: auto;
-  background-size: contain;
-  background-position: center;
-  font-size: 20px;
-  font-weight: 800;
+    box-sizing: border-box;
+    /* font: inherit; */
+    font-family: "Montserrat", sans-serif;
+    margin-left: auto;
+    margin-right: auto;
+    background-size: contain;
+    background-position: center;
+    font-size: 20px;
+    font-weight: 800;
 }
+
 body {
-  color: #ffffff;
+    color: #ffffff;
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/background.jpg');
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/background.jpg');
 
 }
 
 #main-container {
-  background: #eff4fb;
+    background: #eff4fb;
 }
 
 a {
-  text-decoration: none;
-  color: #094069;
+    text-decoration: none;
+    color: #094069;
 }
+
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
+
 a:visited {
-  color: #30C4EB;
+    color: #30C4EB;
 }
+
 h1 {
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  font-size: 2em;
-  /* font-family: '' */
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    font-size: 2em;
+    /* font-family: '' */
 }
 
 h2 {
-  text-align: center;
-  font-weight: 900;
-  font-size: 16pt;
-  color: #fff;
-  text-shadow:
-          0 0 7px #fff,
-          0 0 10px #fff,
-          0 0 21px #fff,
-          0 0 42px #0fa,
-          0 0 82px #0fa,
-          0 0 92px #0fa,
-          0 0 102px #0fa,
-          0 0 151px #0fa;
+    text-align: center;
+    font-weight: 900;
+    font-size: 16pt;
+    color: #fff;
+    text-shadow: 0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px #0fa,
+    0 0 82px #0fa,
+    0 0 92px #0fa,
+    0 0 102px #0fa,
+    0 0 151px #0fa;
 }
 
 body {
-  font-family: sans-serif;
-  /* background: #8e59c0ef; */
-  /* background-image: linear-gradient(#302d5f,#7a77a3); */
-  /* background-image: radial-gradient(#302d5f,#09071a); */
-  background-size: 100%;
-  font-size: 16px;
-  line-height: 1.3;
-  position: relative;
-  margin: 0;
-  min-height: 100vh;
+    font-family: sans-serif;
+    /* background: #8e59c0ef; */
+    /* background-image: linear-gradient(#302d5f,#7a77a3); */
+    /* background-image: radial-gradient(#302d5f,#09071a); */
+    background-size: 100%;
+    font-size: 16px;
+    line-height: 1.3;
+    position: relative;
+    margin: 0;
+    min-height: 100vh;
 }
+
 .generic_button {
-  display: inline-block;
-  border: none;
-  margin: 0;
-  text-decoration: none;
-  background: #e7e7de;
-  color: black;
-  /* font-family: sans-serif; */
-  font-size: 1rem;
-  cursor: pointer;
-  text-align: center;
-  transition: background 150ms ease-in-out, transform 50ms ease;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  border-radius: 7px;
+    display: inline-block;
+    border: none;
+    margin: 0;
+    text-decoration: none;
+    background: #e7e7de;
+    color: black;
+    /* font-family: sans-serif; */
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
+    transition: background 150ms ease-in-out, transform 50ms ease;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border-radius: 7px;
 }
+
 .generic_button:focus {
-  outline: 0;
+    outline: 0;
 }
+
 .generic_button::-moz-focus-inner {
-  border: 0;
+    border: 0;
 }
+
 .generic_button:active {
-  transform: scale(0.98);
+    transform: scale(0.98);
 }
+
 .generic_button:hover {
-  cursor: pointer;
-  background-color: #30C4EB;
+    cursor: pointer;
+    background-color: #30C4EB;
 }
+
 #join_button {
-  padding: 10px 25px;
-  font-size: 16pt;
-  font-weight: bold;
+    padding: 10px 25px;
+    font-size: 16pt;
+    font-weight: bold;
 }
+
 #create_room_input {
-  height: 28px;
-  radius-width: 10px;
-  outline: none;
-  border: none;
+    height: 28px;
+    radius-width: 10px;
+    outline: none;
+    border: none;
 }
 
 .wrapper {
-  margin: 8px 8px 0 8px;
-  display: flex;
-  flex-flow: wrap;
-  align-items: center;
-  justify-content: center;
-  padding-bottom: 3em;
+    margin: 8px 8px 0 8px;
+    display: flex;
+    flex-flow: wrap;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 3em;
 }
 
 .wrapper_item {
-  padding: 10px;
-  margin: 15px 0;
+    padding: 10px;
+    margin: 15px 0;
 }
 
 .textbox {
-  overflow: auto;
-  overflow-wrap: break-word;
-  /*background-color: #eff4fb;*/
-  border: 3px solid black;
-  margin: 8px 0;
-  padding: 20px;
-  border-radius: 10px;
-  background-color: #010422;
+    overflow: auto;
+    overflow-wrap: break-word;
+    /*background-color: #eff4fb;*/
+    border: 3px solid black;
+    margin: 8px 0;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #010422;
 }
 
 #introduction {
-  margin: 30px 100px 0;
-  display: flex;
+    margin: 30px 100px 0;
+    display: flex;
 }
 
 .kuri-logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #main {
-  display: inline-block;
-  text-align: center;
+    display: inline-block;
+    text-align: center;
 }
+
 #refresh, #button_create {
-  margin: 10px auto 0 auto;
-  padding: 3px 10px;
+    margin: 10px auto 0 auto;
+    padding: 3px 10px;
 }
+
 #room_list {
-  font-size: 16pt;
-  padding: 10px;
-  text-align: left;
+    font-size: 16pt;
+    padding: 10px;
+    text-align: left;
 }
+
 #room_list > label {
-  display: inline-block;
-  width: 100%;
+    display: inline-block;
+    width: 100%;
 }
-/* 
+
+/*
 .footer {
   position: absolute;
   bottom: 0;
@@ -179,66 +193,72 @@ body {
   background: #9dc8d6; */
 /* } */
 #bottom_row {
-  margin: 0 15px;
-  text-align: right;
+    margin: 0 15px;
+    text-align: right;
 }
 
 @media all and (min-width: 600px) {
 }
 
 @media all and (min-width: 800px) {
-  h1 {
-    padding: 10px 0 5px 0;
-  }
-  .wrapper_item {
-    flex: 1 0;
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-  #introduction {
-    order: 1;
-  }
+    h1 {
+        padding: 10px 0 5px 0;
+    }
 
-  .intro-text {
-    text-align: justify;
-    width: 70%;
-  }
+    .wrapper_item {
+        flex: 1 0;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
 
-  #introduction img {
-    width: 200px;
-    height: 200px;
-  }
+    #introduction {
+        order: 1;
+    }
 
-  #main {
-    order: 2;
-  }
-  #sidebar_right {
-    order: 3;
-    width: fit-content;
-    margin-top: 0;
-  }
-  #middle {
-    display: inline-block;
-    min-width: 250px;
-    max-width: 400px;
-  }
-  #join_button {
-    display: inline-block;
-  }
+    .intro-text {
+        text-align: justify;
+        width: 70%;
+    }
 
-  .generic_button {
-    border-radius: 6px;
-    border: #ffffff 2px solid;
-    background: #01052f;
-    color: #ffffff;
-    padding: 2px 2px 8px;
-  }
-  .generic_button:hover {
-    background: #ffffff;
-    color: #01052f;
-  }
+    #introduction img {
+        width: 200px;
+        height: 200px;
+    }
 
-  .generic_button:focus {
-    background: #30C4EB;
-  }
+    #main {
+        order: 2;
+    }
+
+    #sidebar_right {
+        order: 3;
+        width: fit-content;
+        margin-top: 0;
+    }
+
+    #middle {
+        display: inline-block;
+        min-width: 250px;
+        max-width: 400px;
+    }
+
+    #join_button {
+        display: inline-block;
+    }
+
+    .generic_button {
+        border-radius: 6px;
+        border: #ffffff 2px solid;
+        background: #01052f;
+        color: #ffffff;
+        padding: 2px 2px 8px;
+    }
+
+    .generic_button:hover {
+        background: #ffffff;
+        color: #01052f;
+    }
+
+    .generic_button:focus {
+        background: #30C4EB;
+    }
 }
